--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My site</title>
   <link href="libs/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=Exo:100,400,500,600,700" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.min.css" />
 </head>
 <body>
